# MaverickJ

./: .gitignore  Containerfile  Dockerfile  LICENSE  README.md  README_CN.md  README_EN.md  SECURITY.md  SKILL_adversarial_debate.md  config.yaml  docker-compose.yml  plan.md  project_guide.md  project_guide_EN.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: agents.instructions.md  graph-nodes.instructions.md  llm-module.instructions.md  output-rendering.instructions.md  prompts.instructions.md  schemas.instructions.md  testing.instructions.md
.github/skills/add-agent/: SKILL.md
.github/skills/add-llm-provider/: SKILL.md
.github/skills/debug-debate/: SKILL.md
.github/skills/tune-debate/: SKILL.md
.github/skills/write-example/: SKILL.md
debate-engine/: .env.example  .gitignore  README.md  package-lock.json  package.json
debate-engine-py/: .dockerignore  .env.example  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
debate-engine-py/examples/: build_vs_buy.py  java_to_go.py
debate-engine-py/src/: main.py
debate-engine-py/src/agents/: critic.py  moderator.py
debate-engine-py/src/core/: argument_registry.py  transcript_manager.py
debate-engine-py/src/graph/nodes/: advocate.py  critic.py  moderator.py  report.py
debate-engine-py/src/llm/: factory.py  router.py
debate-engine-py/src/output/: renderer.py  stream.py
debate-engine-py/src/prompts/: advocate.py  critic.py  fact_checker.py  moderator.py  report_generator.py
debate-engine-py/src/schemas/: debate.py
debate-engine-py/src/templates/: argument_card.md.j2  report.md.j2
debate-engine-py/tests/fixtures/: mock_advocate_response.json
debate-engine-py/tests/test_core/: test_transcript_manager.py
debate-engine-py/tests/test_output/: test_renderer.py
debate-engine/examples/: build-vs-buy.ts  java-to-go-migration.ts
debate-engine/src/: config.ts  index.ts
debate-engine/src/agents/: advocate.ts  base.ts  critic.ts  factChecker.ts  moderator.ts
debate-engine/src/llm/: client.ts  responseParser.ts
debate-engine/src/orchestrator/: argumentRegistry.ts  engine.ts  transcriptManager.ts
debate-engine/src/output/: reportRenderer.ts  streamHandler.ts
debate-engine/src/prompts/: advocate.prompt.ts  critic.prompt.ts  factChecker.prompt.ts  moderator.prompt.ts  reportGenerator.prompt.ts
debate-engine/src/types/: debate.ts  index.ts
debate-engine/tests/: argumentRegistry.test.ts  reportRenderer.test.ts  responseParser.test.ts
debate-engine/tests/fixtures/: mockAdvocateResponse.json  mockCriticResponse.json
examples/: build_vs_buy.py  fusion_phase6_smoke.py  java_to_go.py  library_api.py
maverick_j_skills/: marverick-j-skills.skill
maverick_j_skills/maverick-j-skills/: 01-identity.md  02-protocol.md  03-prompts.md  04-schemas.md  SKILL.md
maverickj/: __init__.py  cli.py  engine.py  events.py  main.py  mcp_server.py
maverickj/agents/: advocate.py  base.py  critic.py  fact_checker.py  moderator.py
maverickj/core/: argument_registry.py  transcript_manager.py
maverickj/graph/: builder.py  conditions.py
maverickj/graph/nodes/: advocate.py  critic.py  fact_checker.py  report.py  (+1 more)
maverickj/llm/: cost.py  factory.py  prompt_cache.py  router.py
maverickj/output/: renderer.py  stream.py
maverickj/prompts/: advocate.py  critic.py  fact_checker.py  moderator.py  report_generator.py
maverickj/schemas/: __init__.py  agents.py  arguments.py  config.py  debate.py  report.py  supply_chain_engine.py
maverickj/supply_chain/: __init__.py  builder.py  fusion_scoring.py  output_extras.py  paths.py
reports/: debate-report.md  我们是否应将-SKU-A21-主供应商切到东南亚-SUP-SEA-03？-20260427-230454.md
skills/adversarial-debate/: 02-protocol.md  05-registry.md  06-integration.md  07-config.md  SKILL.md
src/: cli.py  main.py
src/agents/: advocate.py  base.py  fact_checker.py
src/graph/: builder.py  conditions.py
src/llm/: router.py
src/output/: renderer.py  stream.py
src/prompts/: advocate.py  critic.py  report_generator.py
src/schemas/: __init__.py  agents.py  arguments.py  config.py  report.py
tests/: conftest.py  test_agents_json_repair.py  test_fusion_scoring.py
tests/fixtures/: mock_critic_response.json
tests/test_core/: test_argument_registry.py  test_transcript_manager.py
tests/test_graph/: test_conditions.py
tests/test_output/: test_renderer.py
tests/test_supply_chain/: test_builder_compile.py  test_data_warmup.py  test_phase5_prompts.py  test_tool_id_normalize.py
(+36 files in other folders)
