[project]
name = "maverickj"
version = "0.2.0"
description = "Multi-Agent adversarial debate-driven decision engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ai", "agents", "debate", "decision-making", "langgraph", "llm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "langchain-core>=1.2.28",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "numpy>=1.26",
    "yfinance>=0.2",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/CAgcoder/MaverickJ.git"
Source = "https://github.com/CAgcoder/MaverickJ.git"
Issues = "https://github.com/CAgcoder/MaverickJ.git/issues"

[project.scripts]
debate = "maverickj.main:main"
debate-interactive = "maverickj.cli:main"
maverickj-mcp = "maverickj.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["maverickj"]
